--- a/_config.yml
+++ b/_config.yml
@@ -3,47 +3,52 @@ markdown: redcarpet
 highlighter: pygments
 
 # Site settings
-title: "Mediator"
-description: > # this means to ignore newlines until "email:"
-   A Jekyll theme - Medium inspired
+title: "Meryl Carey"
 
-email: a-mail@mail.mail
+description: "Fitness Expert"
+logo_text: "MC"
+
+email: meryl@merylcarey.com
 #blog logo
-logo: "/assets/images/df_logo.jpg"
+# logo: "/assets/images/df_logo.jpg"
 # blog cover
 cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
-name: 'Dirk Fabisch'
-author: 'Dirk Fabisch'
+name: 'Meryl Carey'
+author: 'Meryl Carey'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://myblog.***.***" # the base hostname & protocol for your site
+url: "http://www.merylcarey.com" # the base hostname & protocol for your site
 baseurl: ""
 
 # social icons and sharing options
 social:
-  - icon:	twitter
-    url:	https://twitter.com/dirkfabisch
-    desc: Follow me on twitter
-    share_url: http://twitter.com/share
-    share_title: ?text=
-    share_link: "&amp;url="
+  - icon:	instagram
+    url:	https://instagram.com/merylcarey
+    desc: Follow me on Instagram
 
-#  - icon:	facebook
-#    url:	https://facebook.com/???
-#    desc: Connect with me facebook
-#    share_url: //www.facebook.com/sharer.php
-#    share_title: ?t=
-#    share_link: "&amp;u="
+  - icon:	facebook
+    url:	https://facebook.com/meryl.carey
+    desc: Connect with me on facebook
+    share_url: //www.facebook.com/sharer.php
+    share_title: ?t=
+    share_link: "&amp;u="
 
-  - icon:	github
-    url:	https://github.com/dirkfabisch
-    desc:	Fork me on github
-    share_url:
-    share_title:
-    share_link:
+  # - icon:	twitter
+    # url:	https://twitter.com/dirkfabisch
+    # desc: Follow me on twitter
+    # share_url: http://twitter.com/share
+    # share_title: ?text=
+    # share_link: "&amp;url="
+
+  # - icon:	github
+    # url:	https://github.com/dirkfabisch
+    # desc:	Fork me on github
+    # share_url:
+    # share_title:
+    # share_link:
 
 #  - icon:	google-plus
 #    url:	https://google.com/???
