--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: meryl@merylcarey.com
 #blog logo
 # logo: "/assets/images/df_logo.jpg"
 # blog cover
-cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
+cover: "/assets/images/dumbbells.JPG"
 
 name: 'Meryl Carey'
 author: 'Meryl Carey'
