Logo text tweaks

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter: pygments
 title: "Meryl Carey"
 
 description: "Fitness Expert"
-logo_text: "MC"
+logo_text: "M"
 
 email: meryl@merylcarey.com
 #blog logo
