Add/update meta tags

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,13 @@ highlighter: pygments
 
 # Site settings
 title: "Meryl Carey"
+subtitle: "Fitness Expert"
 
-description: "Fitness Expert"
+meta:
+  title: "Meryl Carey - Fitness Expert - Austin, TX"
+  description: "Meryl Carey is a certified personal trainer in Austin, TX. Contact me to take your fitness to the next level."
+  keywords: "personal training austin texas fitness"
+
 logo_text: "M"
 
 email: meryl@merylcarey.com
