--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: 'Meryl Carey'
 
 paginate:	5
 
-url: "https://merylcarey.com" # the base hostname & protocol for your site
+url: "https://www.merylcarey.com" # the base hostname & protocol for your site
 baseurl: ""
 
 # social icons and sharing options
