--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ paginate:	5
 url: "https://www.merylcarey.com" # the base hostname & protocol for your site
 baseurl: ""
 
+fb_app_id: 1714869315409187
 # social icons and sharing options
 social:
   - icon:	instagram
